# syncer

./: .coveragerc-unittests-linux  .gitignore  .pycodestyle  .pylintrc  LICENSE  Makefile  README.md  Vagrantfile.win  dev_requirements.in  dev_requirements.txt  dev_requirements_win.txt  pyproject.toml  setup.cfg  syncer
build_in_docker/: pip-deps-upgrade.sh  ubuntu.sh
doc/manpage/: conf.py  index.rst
doc/source/: conf.py  dev_styleguide.rst  development.rst  index.rst  installation.rst  usage.rst
icons-work/: README.md  convert_to_ico.sh
pip_deps/: dev_requirements-linux-py3.10.6.txt  dev_requirements-linux-py3.10.txt  dev_requirements-linux-py3.8.10.txt  dev_requirements-linux-py3.8.txt  dev_requirements-win32-py3.11.0.txt  dev_requirements-win32-py3.11.txt  requirements-linux-py3.10.txt  requirements-linux-py3.8.16.txt  requirements-linux-py3.8.txt  requirements-win32-py3.11.txt
src/: syncer
src/syncer_mods/: __init__.py  application.py  autostart_linux.py  autostart_windows.py  icons.py  rotating_status_icon.py  settings.py  settings_dialog.py  synchronizer.py
syncer_mods/: __init__.py  about_dialog.py  application.py  autostart_linux.py  autostart_windows.py  icons.py  rotating_status_icon.py  settings.py  settings_dialog.py  synchronizer.py
test/unittests/: test_settings_dialog.py  test_synchronizer_get_local_modtime.py  test_synchronizer_get_remote_md5sum.py  test_synchronizer_get_remote_modtime.py  test_synchronizer_md5_of_file.py
tests/unittests/: md5_testfile.txt  test_settings_dialog.py  test_synchronizer_get_local_modtime.py  test_synchronizer_get_remote_md5sum.py  test_synchronizer_get_remote_modtime.py  test_synchronizer_md5_of_file.py
ui/: about_dialog.ui  settings_dialog.ui
